# CS220-Algorithms

./: README.md
project1/: arrayStack.h  dynamicArray.h
project2-sorting-patty1112-main/: CMakeLists.txt  README.md  main.cpp  sorter.h
project2-sorting-patty1112-main/.github/classroom/: autograding.json
project2-sorting-patty1112-main/tests/: tests.cpp
project3-hashtable-patty1112-main/: CMakeLists.txt  README.md  hash_functions.cpp  hash_functions.h  hashtable.h  main.cpp
project3-hashtable-patty1112-main/.github/classroom/: autograding.json
project3-hashtable-patty1112-main/tests/: tests.cpp
project4-trie-patty1112-main/: .gitignore  CMakeLists.txt  README.md  main.cpp  trie.cpp  trie.h
project4-trie-patty1112-main/.github/classroom/: autograding.json
project4-trie-patty1112-main/tests/: tests.cpp
project5-bfs-patty1112-main/: CMakeLists.txt  README.md  graph.cpp  graph.h  main.cpp
project5-bfs-patty1112-main/.github/classroom/: autograding.json
project5-bfs-patty1112-main/tests/: tests.cpp
